# CppDebugLogFramework

./: CMakeLists.txt  README.md
include/: Utilities.hpp  dbglog.hpp
src/: .dbglog.cpp.swp  Utilities.cpp  dbglog.cpp  dbglog.h
test/: .test.cpp.swp  demo  demo.cpp  test.cpp
test/cpplist/: README.md
test/cpplist/include/: .list.h.swp  apply.h  list.h  list_node.h  reduce.h
test/cpplist/src/: .list.cpp.swp  .list_iterator.cpp.swp  .list_node.cpp.swp  .reduce.cpp.swp  .test.cpp.swp  apply.cpp  list.cpp  list_iterator.cpp  list_node.cpp  reduce.cpp  test.cpp
